fix(dev-app): fix styles on Safari

--- a/projects/dev-app/src/app/dialog-header/dialog-header.component.scss
+++ b/projects/dev-app/src/app/dialog-header/dialog-header.component.scss
@@ -14,6 +14,10 @@
   color: rgba(0, 0, 0, 0.8);
 }
 
+.actions {
+  display: inline-flex;
+}
+
 .close-btn {
   position: relative;
   width: 12px;
